# Ralph_Pipeline

./: .gitignore  .mcp.json  CLAUDE.md  MIGRATION-SUMMARY.md  README.md  SETUP.md  STYLE.md  pyproject.toml  ralph.verifier.json  setup-ralph.ps1  setup.ps1  setup.py  setup.sh  update-submodule.py  upgrade.py
.claude/: settings.json  settings.local.json
.claude/agents/: analyzer.md  architect.md  coordinator.md  critic.md  implementer.md  proposer.md  researcher.md  spec-writer.md  verifier.md
.claude/commands/: approve-stubs.md  config-project.md  orient.md  pipeline-status.md  ralph.md  ralph_approve.md  ralph_config.md  ralph_detect-stack.md  ralph_new-spec.md  ralph_orient.md  ralph_reject.md  ralph_status.md  refactor.md  review.md  spec.md  upgrade.md
.claude/hooks/: orchestrator-guard.py  orchestrator-singleton.py  scope-guard.py  verify-implementation.py
.claude/lib/: __init__.py  completion_hooks.py  file_ownership.py  hooks.py  message_hooks.py  ralph_db.py  spec.py  verifier_config.py  worktree.py
.claude/schema/: agent-config.schema.json  message-schema.json  parent-context-schema.json  ralph-verifier.schema.json  refactor-spec-schema.json  spec-schema.json  verification-result-schema.json  verifier-config.schema.json
.claude/scripts/: check-pipeline-status.py  check-status.py  init-orchestrator.py  migrate-specs-to-db.py  orchestrator.py  ralph-recursive-v2.py  ralph-recursive-v3.py  ralph-recursive.py  scaffold-children.py  status-mcp-server.py
.ralph/: ralph.db
ralph/: __init__.py  cli.py
tests/: __init__.py  test_core.py
(+67 files in other folders)
