[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-pipeline"
version = "2.0.0"
description = "A programmatic pipeline for orchestrating LLM agents in software development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ralph Team" }
]
keywords = ["llm", "agents", "pipeline", "code-generation", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jsonschema>=4.20.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ralph = "ralph.cli:main"
ralph-mcp = "ralph.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
